--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,83 +1,140 @@
-* { 
+*{
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  body {
+    padding:0px;
+    margin: 0px;
+ }
+ 
+ body{
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-  }
-  
-  $font-1: 'Lato', sans-serif;
-  
-  $color-1:#21C2F8;
-  $color-2: #FFF;
-  $color-3: #222533;
-  
-  .row {
+ }
+ 
+ 
+ $color-1: #21C2F8;
+ $color-2: #FFF;
+ $color-3: #222533;
+ $color-4: #F39705;
+ $color-5: #E25611;
+ $color-6: #9A2C4A;
+ $color-7: #97C200;
+ $color-8: #3D4C53;
+ $color-9: #62A783;
+ $color-10: #F82F54;
+ $color-11: #8FC567;
+ $font-1:'Lato', sans-serif;
+ 
+ 
+ 
+ 
+ 
+ .row{
     margin-top:50px;
     margin-left:50px;
-    display: flex;
+    display:flex;
     align-items: flex-end;
-  
-    .btn {
-        margin-right:10px;
-        &:last-child {
-            margin-right:0;
+    .btn{
+        margin-right:30px;
+        &:last-child{
+            margin-right:0px;
         }
     }
-  
-  }
-  
-  
-  .btn {
-    background-color: $color-1;
-    color: $color-2;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: $font-1;
-    font-weight: 900;
-    font-size:14px;
-    padding: 11px 37px;
-    border:none;
-    &:hover {
-        background-color: $color-3;
+ }
+ 
+ 
+ 
+ 
+ .btn{
+ background-color: $color-1;
+ color: $color-2;
+ text-decoration: none;
+ text-transform: uppercase;
+ font-family: $font-1;
+ font-weight:900;
+ font-size:14px;
+ padding:11px 37px;
+ border:none;
+ 
+//  &:hover{
+//     background-color: $color-3;
+//  }
+ 
+ &.medium{
+    font-size:18px;
+    padding:13px 46px;
+ }
+ 
+ 
+ 
+ &.large{
+    font-size:26px;
+    padding:24px 95px;
+ }
+ &.x-large{
+    font-size:36px;
+    padding:27px 101px;
+ }
+ 
+ &.round{
+    &-3{
+        border-radius:3px;
     }
-  
-    &.medium {
-        font-size:18px;
-        padding:14px 46px;
-        margin-left: 22px;
+ 
+    &-7{
+        border-radius:7px;
     }
-  
-    &.large {
-        font-size:26px;
-        padding:23px 93px;
-        margin-left: 22px;
+ 
+    &-12{
+        border-radius:12px;
     }
-  
-    &.x-large {
-        font-size:36px;
-        padding:27px 102px;
-        margin-left: 20px;
+ 
+    &-20{
+        border-radius:20px;
     }
-  
-    &.round {
-       &-3 {
-           border-radius: 3px;
-       }
-  
-       &-7 {
-           border-radius: 7px;
-       }
-       &-12 {
-           border-radius: 12px;
-       }
-       &-20 {
-           border-radius: 20px;
-       }
+ }
+ 
+ &.bg-color{
+    &-1{
+        background-color: $color-1
     }
-  }
-  
-  
+ 
+    &-2{
+        background-color: $color-2
+    }
+ 
+    &-3{
+        background-color: $color-3
+    }
+ 
+    &-4{
+        background-color: $color-4
+    }
+    &-5{
+        background-color: $color-5
+    }
+ 
+    &-6{
+        background-color: $color-6
+    }
+    &-7{
+        background-color: $color-7
+    }
+    &-8{
+        background-color: $color-8
+    }
+    &-9{
+        background-color: $color-9
+    }
+    &-10{
+        background-color: $color-10
+    }
+    &-11{
+        background-color: $color-11
+    }
+ 
+ }
+ &:hover{
+    background-color: $color-3;
+ }
+ 
+ 
+ }
