--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,3 +1,5 @@
+@import 'reset';
+
 *{
     box-sizing: border-box;
     padding:0px;
@@ -11,7 +13,7 @@
  
  
  $color-1: #21C2F8;
- $color-2: #FFF;
+ $color-2: #FFFFFF;
  $color-3: #222533;
  $color-4: #F39705;
  $color-5: #E25611;
@@ -44,97 +46,110 @@
  
  
  .btn{
- background-color: $color-1;
- color: $color-2;
- text-decoration: none;
- text-transform: uppercase;
- font-family: $font-1;
- font-weight:900;
- font-size:14px;
- padding:11px 37px;
- border:none;
+    background-color: $color-1;
+    color: $color-2;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: $font-1;
+    font-weight:900;
+    font-size:14px;
+    padding:11px 37px;
+    border:none;
+    
+    &:hover{
+        background-color: $color-3;
+    }
  
-//  &:hover{
-//     background-color: $color-3;
-//  }
- 
- &.medium{
-    font-size:18px;
-    padding:13px 46px;
+    &.medium{
+        font-size:18px;
+        padding:13px 46px;
+    }
+    
+    
+    
+    &.large{
+        font-size:26px;
+        padding:24px 95px;
+    }
+    &.x-large{
+        font-size:36px;
+        padding:27px 101px;
+    }
+    
+    &.round{
+        &-3{
+            border-radius:3px;
+        }
+    
+        &-7{
+            border-radius:7px;
+        }
+    
+        &-12{
+            border-radius:12px;
+        }
+    
+        &-20{
+            border-radius:20px;
+        }
+    }
+    
+    &.bg-color{
+        &-1{
+            background-color: $color-1
+        }
+    
+        &-2{
+            background-color: $color-2
+        }
+    
+        &-3{
+            background-color: $color-3
+        }
+    
+        &-4{
+            background-color: $color-4
+        }
+        &-5{
+            background-color: $color-5
+        }
+    
+        &-6{
+            background-color: $color-6
+        }
+        &-7{
+            background-color: $color-7
+        }
+        &-8{
+            background-color: $color-8
+        }
+        &-9{
+            background-color: $color-9
+        }
+        &-10{
+            background-color: $color-10
+        }
+        &-11{
+            background-color: $color-11
+        }
+    
+    }
+    &:hover{
+        background-color: $color-3;
+     }
  }
- 
- 
- 
- &.large{
-    font-size:26px;
-    padding:24px 95px;
- }
- &.x-large{
-    font-size:36px;
-    padding:27px 101px;
- }
- 
- &.round{
-    &-3{
-        border-radius:3px;
+
+.row {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 50px;
+    margin-left: 50px;
+
+    .btn {
+        margin-right: 30px;
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
- 
-    &-7{
-        border-radius:7px;
-    }
- 
-    &-12{
-        border-radius:12px;
-    }
- 
-    &-20{
-        border-radius:20px;
-    }
- }
- 
- &.bg-color{
-    &-1{
-        background-color: $color-1
-    }
- 
-    &-2{
-        background-color: $color-2
-    }
- 
-    &-3{
-        background-color: $color-3
-    }
- 
-    &-4{
-        background-color: $color-4
-    }
-    &-5{
-        background-color: $color-5
-    }
- 
-    &-6{
-        background-color: $color-6
-    }
-    &-7{
-        background-color: $color-7
-    }
-    &-8{
-        background-color: $color-8
-    }
-    &-9{
-        background-color: $color-9
-    }
-    &-10{
-        background-color: $color-10
-    }
-    &-11{
-        background-color: $color-11
-    }
- 
- }
- &:hover{
-    background-color: $color-3;
- }
- 
- 
- }
+}
